# Meow-passManager

./: .gitignore  README.md  main.py  pyproject.toml  requirments.txt
pm/: __main__.py  crypto.py  manager.py  validator.py
